Final task done

--- a/react/src/css/App.css
+++ b/react/src/css/App.css
@@ -3,3 +3,24 @@
 body {
   font-family: 'Roboto Slab', serif;
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 0px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  border-radius: 5px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgba(0, 0, 0, 0);
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #00000000;
+}
